Add support for creating a process id file. Re-org the main class.

--- a/config.ini
+++ b/config.ini
@@ -8,3 +8,4 @@ Server = irc.freenode.net
 Channel = #channel
 JoinMessage = This channel is logged - http://www.somewhere...
 OutputDir = c:/temp/logbot/
+PidFile = c:/temp/logbot.pid
