Add command and control capability through private messages. Add ability to record multiple channels.

--- a/config.ini
+++ b/config.ini
@@ -9,3 +9,4 @@ Channel = #channel
 JoinMessage = This channel is logged - http://www.somewhere...
 OutputDir = c:/temp/logbot/
 PidFile = c:/temp/logbot.pid
+ControlPassword = some-secret-password
